src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_results_pane_with_success_unfocused.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ String ──────────────────────────────────────────────────────────────────────┐"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│.name                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | ↑/Ctrl+R: History | Enter: Output Result | "
