src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_stats_bar_array_focused.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Array [3 objects] ───────────────────────────────────────────────────────────┐"
"│[                                                                             │"
"│  {                                                                           │"
"│    "id": 1                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 2                                                                   │"
"│  },                                                                          │"
"│  {                                                                           │"
"│    "id": 3                                                                   │"
"│  }                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1/?: Help | Shift+Tab: Switch Pane | Enter: Output Result | Ctrl+Q: Output Que"
