src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_tooltip_dismiss_hint.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                              ┌ fn: sort_by ───────────────────── Ctrl+T to dismiss ┐ │"
"│                                                              │Sort array elements by a computed value              │ │"
"│                                                              │                                                     │ │"
"│                                                              │  sort_by(.name)             │ sort by field         │ │"
"│                                                              │  sort_by(.date) | reverse   │ sort descending       │ │"
"│                                                              │  sort_by(-.price)           │ descending (cleaner)  │ │"
"│                                                              │  sort_by(.price | tonumber) │ ensure numeric        │ │"
"│                                                              │                                                     │ │"
"│                                                              │💡 Use sort_by(-.field) instead of sort_by(.field) | │ │" Hidden by multi-width symbols: [(65, " ")]
"│                                                              │   reverse                                           │ │"
"└──────────────────────────────────────────────────────────────└─────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
